.desktop files renamed and small minor path changes

--- a/AniDownloader.desktop
+++ b/AniDownloader.desktop
@@ -3,8 +3,8 @@ Version=1.0
 Type=Application
 Name=AniDownloader
 Comment=Scarica tutti gli anime in simulcast configurati
-Path=/home/lorenzo/.local/share/myScript/downloadAnime/
-Exec=sh -c './downloadAnime.sh'
-Icon=/home/lorenzo/.local/share/myScript/downloadAnime/logo.png
+Path=/home/lorenzo/Video/Simulcast/.AniDownloader/
+Exec=sh -c './AniDownloader.sh'
+Icon=/home/lorenzo/Video/Simulcast/.AniDownloader/logo.png
 Terminal=true
 Categories=Network;
